objects/EMP_Sub_Menu__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Page_Target__c</fullName>
        <label>Page Target</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submenu_Name__c</fullName>
        <label>Submenu Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submenu_URL__c</fullName>
        <label>Submenu URL</label>
        <type>Url</type>
    </fields>
    <label>EMP Sub Menu</label>
</CustomObject>